--- a/package.json
+++ b/package.json
@@ -6,30 +6,39 @@
 	"scripts": {
 		"build": "vite build",
 		"commit": "cz",
-		"dev": "vite --open",
+		"dev": "vite --port 3000",
 		"prepare": "husky install",
-		"preview": "vite preview",
+		"preview": "vite preview --port 3000",
 		"preview:test": "start-server-and-test preview http://localhost:4173",
 		"test": "vitest",
 		"test:ci": "vitest run",
 		"test:e2e": "pnpm preview:test 'cypress open'",
 		"test:e2e:headless": "pnpm preview:test 'cypress run'",
 		"test:e2e:ci": "vite build && pnpm preview:test 'cypress run --record'",
-		"format": "prettier -uw --cache --ignore-path .gitignore .",
+		"format": " biome format --write ./src",
 		"run-tsc": "tsc",
-		"run-eslint": "eslint --cache --fix --ignore-path .gitignore --ext .ts,.tsx .",
+		"run-biome": "biome check --apply ./src",
 		"run-stylelint": "stylelint --cache --fix --ignore-path .gitignore **/*.css",
-		"lint": "run-p run-tsc run-eslint run-stylelint",
+		"lint": "run-p run-tsc run-biome run-stylelint",
 		"validate": "run-p lint test:ci test:e2e:headless"
 	},
 	"dependencies": {
+		"@radix-ui/react-icons": "^1.3.0",
+		"@radix-ui/react-progress": "^1.0.3",
+		"@radix-ui/react-slot": "^1.0.2",
 		"@tanstack/react-query": "5.17.0",
+		"axios": "^1.6.8",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.0",
+		"lucide-react": "^0.363.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
-		"react-router-dom": "6.21.1"
+		"react-router-dom": "6.21.1",
+		"tailwind-merge": "^2.2.2",
+		"tailwindcss-animate": "^1.0.7"
 	},
 	"devDependencies": {
-		"@nabla/vite-plugin-eslint": "2.0.2",
+		"@biomejs/biome": "^1.6.3",
 		"@tailwindcss/forms": "0.5.7",
 		"@testing-library/cypress": "10.0.1",
 		"@testing-library/dom": "9.3.3",
@@ -41,8 +50,6 @@
 		"@types/react-dom": "18.2.18",
 		"@types/react-router-dom": "5.3.3",
 		"@types/testing-library__jest-dom": "5.14.9",
-		"@typescript-eslint/eslint-plugin": "7.1.0",
-		"@typescript-eslint/parser": "7.1.0",
 		"@vitejs/plugin-react": "4.2.1",
 		"@vitest/coverage-istanbul": "1.1.1",
 		"autoprefixer": "10.4.16",
@@ -50,27 +57,12 @@
 		"css-mediaquery": "0.1.2",
 		"cypress": "13.3.1",
 		"cz-conventional-changelog": "3.3.0",
-		"eslint": "8.56.0",
-		"eslint-config-airbnb": "19.0.4",
-		"eslint-config-airbnb-base": "15.0.0",
-		"eslint-config-airbnb-typescript": "17.1.0",
-		"eslint-config-prettier": "9.1.0",
-		"eslint-plugin-cypress": "2.15.1",
-		"eslint-plugin-import": "2.29.1",
-		"eslint-plugin-jsx-a11y": "6.8.0",
-		"eslint-plugin-react": "7.33.2",
-		"eslint-plugin-react-hooks": "4.6.0",
-		"eslint-plugin-react-prefer-function-component": "3.3.0",
-		"eslint-plugin-testing-library": "6.2.0",
-		"eslint-plugin-unicorn": "51.0.1",
 		"husky": "8.0.3",
 		"jsdom": "24.0.0",
 		"lint-staged": "15.2.0",
 		"msw": "2.0.11",
 		"npm-run-all2": "5.0.0",
 		"postcss": "8.4.32",
-		"prettier": "3.1.1",
-		"prettier-plugin-tailwindcss": "0.5.10",
 		"start-server-and-test": "2.0.3",
 		"stylelint": "16.1.0",
 		"stylelint-config-standard": "36.0.0",
@@ -86,18 +78,12 @@
 	},
 	"browserslist": {
 		"production": "Edge >= 18, Firefox >= 60, Chrome >= 61, Safari >= 11, Opera >= 48",
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version"
-		]
+		"development": ["last 1 chrome version", "last 1 firefox version"]
 	},
 	"lint-staged": {
-		"*": "prettier -uw --cache",
+		"*": "biome format --write",
 		"*.css": "stylelint --cache --fix",
-		"*.{ts,tsx}": [
-			"eslint --cache --fix",
-			"vitest related --run --coverage=false"
-		]
+		"*.{ts,tsx}": ["biome check --apply", "vitest related --run --coverage=false"]
 	},
 	"pnpm": {
 		"overrides": {
