--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,6 @@
 {
 	"compilerOptions": {
 		"allowSyntheticDefaultImports": true,
-		"baseUrl": "src",
 		"forceConsistentCasingInFileNames": true,
 		"isolatedModules": true,
 		"jsx": "react-jsx",
@@ -13,6 +12,10 @@
 		"skipLibCheck": true,
 		"strict": true,
 		"target": "ESNext",
+		"baseUrl": ".",
+		"paths": {
+			"@/*": ["src/*"]
+		},
 		"types": ["vite/client", "vitest/globals", "vite-plugin-pwa/client"]
 	},
 	"include": ["src"],
