--- a/package.json
+++ b/package.json
@@ -27,11 +27,15 @@
 		"@radix-ui/react-icons": "^1.3.0",
 		"@radix-ui/react-label": "^2.0.2",
 		"@radix-ui/react-progress": "^1.0.3",
+		"@radix-ui/react-scroll-area": "^1.0.5",
+		"@radix-ui/react-separator": "^1.0.3",
 		"@radix-ui/react-slot": "^1.0.2",
 		"@tanstack/react-query": "5.17.0",
+		"@tanstack/react-query-devtools": "^5.28.10",
 		"axios": "^1.6.8",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
+		"dayjs": "^1.11.10",
 		"lucide-react": "^0.363.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
