--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
 		"dayjs": "^1.11.10",
+		"js-cookie": "^3.0.5",
 		"lucide-react": "^0.363.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
@@ -52,6 +53,7 @@
 		"@testing-library/react": "14.1.2",
 		"@testing-library/user-event": "14.5.2",
 		"@types/css-mediaquery": "0.1.4",
+		"@types/js-cookie": "^3.0.6",
 		"@types/react": "18.2.46",
 		"@types/react-dom": "18.2.18",
 		"@types/react-router-dom": "5.3.3",
