--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
 		"@radix-ui/react-scroll-area": "^1.0.5",
 		"@radix-ui/react-separator": "^1.0.3",
 		"@radix-ui/react-slot": "^1.0.2",
-		"@tanstack/react-query": "5.17.0",
+		"@tanstack/query-sync-storage-persister": "^5.28.9",
+		"@tanstack/react-query": "5.28.9",
 		"@tanstack/react-query-devtools": "^5.28.10",
+		"@tanstack/react-query-persist-client": "^5.28.9",
 		"axios": "^1.6.8",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
