--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,10 @@
-name: Test
+name: Spotify Integration CI/CD
 
 on:
   push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+    branches: 
+      - production
+
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -29,10 +29,13 @@ jobs:
       - name: Install dependencies
         run: pnpm i && pnpm cypress install
 
-      - name: Validate
-        run: pnpm run-p lint test:ci test:e2e:ci
-        env:
-          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+      - name: Unitary tests
+        run: pnpm run test:ci
 
-      - name: Upload coverage
-        uses: codecov/codecov-action@v4
+      - name: Validate
+        run: pnpm run-p lint test:ci
+      #   run: pnpm run-p lint test:ci test:e2e:ci
+      #   env:
+      #     CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+
+      
