fix-ci: install pnpm before use pnpm

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
           cache: 'pnpm'
 
       - name: ♻️ Install dependencies
-        run: pnpm i && pnpm cypress install
+        run: npm i -g pnpm && pnpm i && pnpm cypress install
 
       - name: 📇Validate
         run: pnpm run-p lint test:ci
