--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,7 @@ jobs:
         run: pnpm install && pnpm cypress install
 
       - name: 📇Validate
-        run: pnpm run-p lint test:ci
+        run: lint 
 
       - name: ♾️ Unitary tests
         run: pnpm run test:ci
@@ -45,7 +45,7 @@ jobs:
         run: npm install --global vercel@latest
 
       - name: ⚓ Pull Vercel Environment Information
-        run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
+        run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
 
       - name: 📦 Build Project Artifacts
         run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
