--- a/package.json
+++ b/package.json
@@ -15,12 +15,11 @@
 		"test:e2e": "pnpm preview:test 'cypress open'",
 		"test:e2e:headless": "pnpm preview:test 'cypress run'",
 		"test:e2e:ci": "vite build && pnpm preview:test 'cypress run --record'",
-		"format": " biome format --write .",
+		"format": "biome format --write .",
 		"run-tsc": "tsc",
-		"run-biome": "biome check --apply .",
-		"run-stylelint": "stylelint --cache --fix --ignore-path .gitignore **/*.css",
-		"lint": "run-p run-tsc run-biome run-stylelint",
-		"validate": "run-p lint test:ci test:e2e:headless"
+		"run-biome": "biome check .",
+		"lint:ci": "run-tsc run-biome",
+		"lint:fix": "biome check --apply ."
 	},
 	"dependencies": {
 		"@radix-ui/react-avatar": "^1.0.4",
@@ -74,8 +73,6 @@
 		"npm-run-all2": "5.0.0",
 		"postcss": "8.4.32",
 		"start-server-and-test": "2.0.3",
-		"stylelint": "16.1.0",
-		"stylelint-config-standard": "36.0.0",
 		"tailwindcss": "3.4.0",
 		"typescript": "5.3.3",
 		"vite": "5.0.10",
@@ -92,7 +89,6 @@
 	},
 	"lint-staged": {
 		"*": "biome format --write .",
-		"*.css": "stylelint --cache --fix",
 		"*.{ts,tsx}": ["biome check --apply", "vitest related --run --coverage=false"]
 	},
 	"pnpm": {
