--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,10 +6,12 @@ env:
 
 on:
   push:
-    branches: [production]
-    
+    branches: 
+      - production
+
   workflow_dispatch:
-    branches: [production]
+    branches: 
+      - production
 
 
 concurrency:
@@ -21,12 +23,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
-
-      - uses: pnpm/action-setup@v3.0.0
-        with:
-          version: latest
-
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
@@ -36,7 +32,7 @@ jobs:
         run: pnpm install && pnpm cypress install
 
       - name: 📇Lint
-        run: pnpm run lint:ci 
+        run: pnpm lint:ci
 
       - name: ♾️ Unitary tests
         run: pnpm run test:ci
@@ -48,7 +44,7 @@ jobs:
         run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
 
       - name: 📦 Build Project Artifacts
-        run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
+        run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
 
       - name: 🚀 Deploy Project Artifacts to Vercel
-        run: vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
+        run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
