--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
 	"css.validate": false,
-	"diffEditor.ignoreTrimWhitespace": false,
+	"diffEditor.ignoreTrimWhitespace": true,
 	"editor.codeActionsOnSave": ["source.addMissingImports", "source.fixAll", "source.organizeImports"],
 	"editor.defaultFormatter": "biomejs.biome",
 	"editor.foldingImportsByDefault": true,
