--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
 		"@radix-ui/react-icons": "^1.3.0",
 		"@radix-ui/react-label": "^2.0.2",
 		"@radix-ui/react-scroll-area": "^1.0.5",
-		"@radix-ui/react-separator": "^1.0.3",
 		"@radix-ui/react-slot": "^1.0.2",
+		"@radix-ui/react-tooltip": "^1.0.7",
 		"@tanstack/query-sync-storage-persister": "^5.28.9",
 		"@tanstack/react-query": "5.28.9",
 		"@tanstack/react-query-devtools": "^5.28.10",
