--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
 		"@radix-ui/react-scroll-area": "^1.0.5",
 		"@radix-ui/react-slot": "^1.0.2",
 		"@radix-ui/react-tooltip": "^1.0.7",
+		"@sentry/react": "^7.109.0",
+		"@sentry/vite-plugin": "^2.16.0",
 		"@tanstack/query-sync-storage-persister": "^5.28.9",
 		"@tanstack/react-query": "5.28.9",
 		"@tanstack/react-query-devtools": "^5.28.10",
