refactor: remove unused files

--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
 		"dev": "vite --port 3000",
 		"prepare": "husky install",
 		"preview": "vite preview --port 3000",
-		"preview:test": "start-server-and-test preview http://localhost:4173",
 		"test": "vitest",
 		"test:ci": "vitest run",
 		"test:e2e": "pnpm preview:test 'cypress open'",
@@ -74,14 +73,13 @@
 		"msw": "2.0.11",
 		"npm-run-all2": "5.0.0",
 		"postcss": "8.4.32",
-		"start-server-and-test": "2.0.3",
 		"tailwindcss": "3.4.0",
 		"typescript": "5.3.3",
 		"vite": "5.0.10",
 		"vite-plugin-pwa": "0.17.4",
 		"vite-tsconfig-paths": "4.2.3",
 		"vitest": "1.1.1",
-		"whatwg-fetch": "3.6.20",
+		"whatwg-fetch": "^3.6.20",
 		"workbox-build": "7.0.0",
 		"workbox-window": "7.0.0"
 	},
